[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Test/Word/TestWordCopyTyping.gd" type="Script" id=2]
[ext_resource path="res://Lexical/Keyboard/Keyboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Test/test_bg.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="Theme" id=11]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 6 )
VScrollBar/styles/grabber_highlight = SubResource( 7 )
VScrollBar/styles/grabber_pressed = SubResource( 8 )
VScrollBar/styles/scroll = SubResource( 9 )
VScrollBar/styles/scroll_focus = SubResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 11
font_data = ExtResource( 1 )

[node name="TestWordCopyTyping" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Explanation" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.0444444
margin_top = 8.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "_how_do_you_write_this_in_thai"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="English" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.0444444
margin_left = 96.0
margin_top = 32.0
margin_right = -104.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Civilisation"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="."]
margin_left = 261.0
margin_top = 155.0
margin_right = 309.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "_ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyboard" parent="." instance=ExtResource( 3 )]
position = Vector2( 4.86436, 56.3393 )

[node name="Answer" type="TextEdit" parent="."]
margin_left = 8.0
margin_top = 155.397
margin_right = 256.0
margin_bottom = 179.397
theme = SubResource( 11 )
custom_fonts/font = SubResource( 4 )
text = "อารยธรรม"
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Button" parent="."]
margin_left = 224.0
margin_top = 32.0
margin_right = 272.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 5 )
text = "_hint"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OK" to="." method="_on_OK_pressed"]
[connection signal="mouse_entered" from="Hint" to="." method="_on_Hint_mouse_entered"]
[connection signal="mouse_exited" from="Hint" to="." method="_on_Hint_mouse_exited"]
